[gd_scene load_steps=62 format=3 uid="uid://hntg0kxckryy"]

[ext_resource type="PackedScene" uid="uid://d4aiubsji5y0w" path="res://scenes/health_component.tscn" id="1_mlutj"]
[ext_resource type="Script" path="res://scripts/ranged_enemy.gd" id="1_vm42c"]
[ext_resource type="Texture2D" uid="uid://datcng5n7lkt1" path="res://assets/mage-assets/mage-back.png" id="3_yeo0i"]
[ext_resource type="Texture2D" uid="uid://70tdxk4de63q" path="res://assets/mage-assets/mage-back-attack.png" id="4_gi8uv"]
[ext_resource type="Texture2D" uid="uid://c7jb511h4sulr" path="res://assets/mage-assets/mage-front.png" id="5_u2tr8"]
[ext_resource type="PackedScene" uid="uid://c8nuyfj6l50ju" path="res://scenes/hitbox_component.tscn" id="5_ymqyy"]
[ext_resource type="Script" path="res://scripts/States/StateMachine.gd" id="6_m373w"]
[ext_resource type="Texture2D" uid="uid://db31u4jvl7eqa" path="res://assets/mage-assets/mage-front-attack.png" id="6_qgv0n"]
[ext_resource type="Texture2D" uid="uid://vrax54nv4dla" path="res://assets/mage-assets/mage-side.png" id="7_013iu"]
[ext_resource type="Script" path="res://scripts/States/EnemyIdle.gd" id="7_bp3dp"]
[ext_resource type="Script" path="res://scripts/States/EnemyRangeAttack.gd" id="8_ggohs"]
[ext_resource type="Texture2D" uid="uid://nc7fx51wtit2" path="res://assets/mage-assets/mage-side-attack.png" id="8_k2xc1"]
[ext_resource type="Script" path="res://scripts/currency_controller.gd" id="13_m0rmp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_leq0p"]
atlas = ExtResource("3_yeo0i")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t50d"]
atlas = ExtResource("3_yeo0i")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_35s4x"]
atlas = ExtResource("3_yeo0i")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hu1fk"]
atlas = ExtResource("3_yeo0i")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6msc"]
atlas = ExtResource("3_yeo0i")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_br0d1"]
atlas = ExtResource("3_yeo0i")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lue4g"]
atlas = ExtResource("3_yeo0i")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f73c2"]
atlas = ExtResource("3_yeo0i")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfhcw"]
atlas = ExtResource("3_yeo0i")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0udw4"]
atlas = ExtResource("4_gi8uv")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jddbb"]
atlas = ExtResource("4_gi8uv")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkgox"]
atlas = ExtResource("4_gi8uv")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_80bse"]
atlas = ExtResource("4_gi8uv")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l5vw"]
atlas = ExtResource("4_gi8uv")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mc1j"]
atlas = ExtResource("5_u2tr8")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhvim"]
atlas = ExtResource("5_u2tr8")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wix2y"]
atlas = ExtResource("5_u2tr8")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_caklr"]
atlas = ExtResource("5_u2tr8")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2j4j"]
atlas = ExtResource("5_u2tr8")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nqed"]
atlas = ExtResource("5_u2tr8")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx5sx"]
atlas = ExtResource("5_u2tr8")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymu4d"]
atlas = ExtResource("5_u2tr8")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7sua"]
atlas = ExtResource("5_u2tr8")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i47tm"]
atlas = ExtResource("6_qgv0n")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_skj7s"]
atlas = ExtResource("6_qgv0n")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_objjm"]
atlas = ExtResource("6_qgv0n")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t7iw"]
atlas = ExtResource("6_qgv0n")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwae6"]
atlas = ExtResource("6_qgv0n")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o48i"]
atlas = ExtResource("7_013iu")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3g71"]
atlas = ExtResource("7_013iu")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a14j6"]
atlas = ExtResource("7_013iu")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l843v"]
atlas = ExtResource("7_013iu")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dsfy"]
atlas = ExtResource("7_013iu")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjjft"]
atlas = ExtResource("7_013iu")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_to341"]
atlas = ExtResource("7_013iu")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2f17"]
atlas = ExtResource("7_013iu")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sg1d"]
atlas = ExtResource("7_013iu")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfkaf"]
atlas = ExtResource("8_k2xc1")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d3wi"]
atlas = ExtResource("8_k2xc1")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0137o"]
atlas = ExtResource("8_k2xc1")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sl2s"]
atlas = ExtResource("8_k2xc1")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_77f5h"]
atlas = ExtResource("8_k2xc1")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_1publ"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_leq0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t50d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35s4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu1fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6msc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br0d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lue4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f73c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfhcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f73c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lue4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br0d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6msc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hu1fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35s4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t50d")
}],
"loop": true,
"name": &"back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0udw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jddbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkgox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80bse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l5vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80bse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkgox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jddbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0udw4")
}],
"loop": false,
"name": &"back_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mc1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wix2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caklr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2j4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nqed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx5sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymu4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7sua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymu4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx5sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nqed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2j4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caklr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wix2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvim")
}],
"loop": true,
"name": &"front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i47tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skj7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_objjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t7iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwae6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t7iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_objjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skj7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i47tm")
}],
"loop": false,
"name": &"front_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o48i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3g71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a14j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l843v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dsfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjjft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to341")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2f17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sg1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2f17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to341")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjjft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dsfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l843v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a14j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3g71")
}],
"loop": true,
"name": &"side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfkaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d3wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0137o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sl2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77f5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sl2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0137o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d3wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfkaf")
}],
"loop": false,
"name": &"side_attack",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8t2u"]
size = Vector2(98, 134)

[sub_resource type="CircleShape2D" id="CircleShape2D_06d6u"]
radius = 76.0066

[sub_resource type="Animation" id="Animation_nlqh0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v8w4y"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.945098, 0.270588, 0, 1), Color(1, 1, 1, 1), Color(0.945098, 0.270588, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjmx0"]
_data = {
"RESET": SubResource("Animation_nlqh0"),
"hit": SubResource("Animation_v8w4y")
}

[node name="RangedEnemy" type="CharacterBody2D" groups=["Enemies", "RangedEnemies"]]
z_index = 5
script = ExtResource("1_vm42c")

[node name="HealthComponent" parent="." instance=ExtResource("1_mlutj")]
MAX_HEALTH = 200.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1publ")
animation = &"side"
autoplay = "front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -4)
shape = SubResource("RectangleShape2D_s8t2u")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "body") groups=["Enemies", "RangedEnemies"] instance=ExtResource("5_ymqyy")]
health_component = NodePath("../HealthComponent")
body = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_06d6u")
debug_color = Color(0.917103, 7.49877e-05, 0.706898, 0.42)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_m373w")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_bp3dp")
enemy = NodePath("../..")

[node name="RangeAttack" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_ggohs")
enemy = NodePath("../..")

[node name="CurrencyController" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("13_m0rmp")
health_component = NodePath("../HealthComponent")
VALUE = 120.0

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pjmx0")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
